Updated the FindByRoleLocatorFactory, to add support for Standard Selenium Page Factory annotations, to be included with FindByRole annotation in a Page class